# chintai-zeromq-watcher-plugin

./: README.md  build.sh
watcher_plugin/: CMakeLists.txt  watcher_plugin.cpp
